--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "postcss-assets": "^5.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-media": "^1.9.2",
     "react-plx": "^1.3.11",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
-    "usedcss": "^1.0.7"
+    "usedcss": "^1.0.7",
+    "vertical-timeline-component-for-react": "^1.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
