--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-media": "^1.9.2",
     "react-plx": "^1.3.11",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.8",
+    "react-scroll-up-button": "^1.6.4",
     "usedcss": "^1.0.7",
     "vertical-timeline-component-for-react": "^1.0.6"
   },
@@ -39,7 +40,7 @@
   ],
   "devDependencies": {
     "autoprefixer": "^9.4.3",
-    "cssnano": "^4.1.7",
+    "cssnano": "^4.1.10",
     "gulp": "^4.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-sourcemaps": "^2.6.4",
